added function palindrome for a single word

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
                 <label for="word" class="mt-5">Inserisci una parola per capire se è palindroma</label>
                 <input type="text" name="word" id="word" class="mb-3" placeholder="Inserisci parola...">
                 <button class="btn btn-success mb-3"> VAI </button>
+                <div class="resultWord"></div>
             </div>
-            <div class="resultWord">
-            </div>
+            
 
 
         </div>
