added evenOdd function

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
                     <div class="me-5">
                         <label for="range" class="mt-5">Seleziona un numero da 1 a 5</label>
                         <select name="range" id="range" class="mb-5">
-                            <option value="one">1</option>
-                            <option value="two">2</option>
-                            <option value="three">3</option>
-                            <option value="for">4</option>
-                            <option value="five">5</option>
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
                         </select>
                     </div>
                     <div class="computerNumber">
